<package>
  <name>zumo_comms_node</name>
  <version>0.0.0</version>
  <description>
    Communicates with the Zumo 32U4 robot via serial.
  </description>
  <author>Nicholi Shiell</author>
  <maintainer email="nicholishiell@gmail.com">Nicholi Shiell</maintainer>
  <license>BSD</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>bupimo_msgs</run_depend>
</package>
